--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "template-2",
+  "name": "you-ski",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev-https": "local-ssl-proxy --source 3001 --target 3000 --cert localhost.pem --key localhost-key.pem & next dev",
+    "tunnel": "ngrok http 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^0.0.48",
-    "@ai-sdk/openai": "^0.0.54",
-    "@deepgram/sdk": "^3.6.0",
-    "ai": "^3.3.20",
-    "date-fns": "^3.6.0",
-    "firebase": "^10.13.0",
-    "framer-motion": "^11.3.31",
-    "lucide-react": "^0.436.0",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-markdown": "^9.0.1",
-    "replicate": "^0.32.0"
+    "@types/mapbox-gl": "^3.4.1",
+    "autoprefixer": "^10.0.1",
+    "firebase": "^10.14.1",
+    "mapbox-gl": "^3.10.0",
+    "next": "14.1.0",
+    "postcss": "^8.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.17.19",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
+    "local-ssl-proxy": "^2.0.5",
+    "ngrok": "^5.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
