--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "next dev",
     "dev-https": "local-ssl-proxy --source 3001 --target 3000 --cert localhost.pem --key localhost-key.pem & next dev",
-    "tunnel": "ngrok http 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,12 +13,16 @@
   "dependencies": {
     "@types/mapbox-gl": "^3.4.1",
     "autoprefixer": "^10.0.1",
-    "firebase": "^10.14.1",
+    "firebase": "^9.23.0",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.476.0",
     "mapbox-gl": "^3.10.0",
     "next": "14.1.0",
+    "openai": "^4.28.0",
     "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "replicate": "^0.27.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
   },
@@ -30,7 +33,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "local-ssl-proxy": "^2.0.5",
-    "ngrok": "^5.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
