Add cache control headers and cache busting

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "NEXT_PUBLIC_BUILD_TIME=$(date +%s) npm run build"
   publish = ".next"
 
 [[plugins]]
@@ -13,4 +13,9 @@
   NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET = "you-ski.firebasestorage.app"
   NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID = "858091254977"
   NEXT_PUBLIC_FIREBASE_APP_ID = "1:858091254977:web:56232eebaaaa093b389040"
-  NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID = "G-HSJWNWL26X" 
+  NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID = "G-HSJWNWL26X"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate" 
