--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "local-ssl-proxy": "^2.0.5",
+    "netlify-cli": "^19.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
