--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/mapbox-gl": "^3.4.1",
     "autoprefixer": "^10.0.1",
+    "chart.js": "^4.4.8",
     "firebase": "^9.23.0",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
@@ -21,6 +22,7 @@
     "openai": "^4.28.0",
     "postcss": "^8.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "replicate": "^0.27.1",
     "tailwindcss": "^3.3.0",
